--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Johnson_Corey_Lab5)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Johnson_Corey_Lab5 main.cpp Insect.cpp Insect.h Bee.cpp Bee.h Ant.cpp Ant.h BoardSpace.cpp BoardSpace.h HarvesterAnt.cpp HarvesterAnt.h ThrowerAnt.cpp ThrowerAnt.h FireAnt.cpp FireAnt.h LongThrowerAnt.cpp LongThrowerAnt.h ShortThrowerAnt.cpp ShortThrowerAnt.h WallAnt.cpp WallAnt.h NinjaAnt.cpp NinjaAnt.h BodyguardAnt.cpp BodyguardAnt.h)
+add_executable(Johnson_Corey_Lab5 main.cpp Insect.cpp Insect.h Bee.cpp Bee.h Ant.cpp Ant.h BoardSpace.cpp BoardSpace.h HarvesterAnt.cpp HarvesterAnt.h ThrowerAnt.cpp ThrowerAnt.h FireAnt.cpp FireAnt.h LongThrowerAnt.cpp LongThrowerAnt.h ShortThrowerAnt.cpp ShortThrowerAnt.h WallAnt.cpp WallAnt.h NinjaAnt.cpp NinjaAnt.h BodyguardAnt.cpp BodyguardAnt.h AntColony.cpp AntColony.h)
